# harmonium_lab

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
references/ambient/: meta.json
references/classical-simple/: meta.json
references/jazz-calm/: meta.json
references/jazz-upbeat/: meta.json
references/training-backing/: meta.json
scripts/: download_corpus.sh
src/harmonium_lab/: __init__.py  audio.py  ci.py  cli.py  loader.py  mgeval_metrics.py  muspy_metrics.py  profiles.py  scorer.py  symbolic.py  types.py
tests/: conftest.py  test_audio.py  test_ci.py  test_loader.py  test_scoring.py  test_symbolic.py
